package domain.constructionimage

import domain.project.Project

trait ConstructionImage {

  val project: Project

}
