package domain.tag

trait Tag {

}
